created express server

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "git repository": "",
   "author": "AnkitDroidGit",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
