--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
   "description": "website using nodejs and expressjs",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "node server.js"
   },
   "git repository": "",
   "author": "AnkitDroidGit",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.6",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config": "^0.3.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^2.0.4"
   }
 }
