--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.6",
+    "cookie-session": "^1.4.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
