--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
     "es6": true
   },
   "extends": ["airbnb-base", "prettier"],
-  "olugins": ["prettier"],
-
+  "plugins": ["prettire"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
